morse/style/items/post.css
/*
    This file is part of Morse.

    Morse is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Morse is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Morse.  If not, see <http://www.gnu.org/licenses/>.
*/

.post-item {
  border-radius: 3pt;
  border:1pt solid #ccc;
  padding:0;
  margin-bottom:5pt;
  background:#fff;
  box-shadow:1px 1px #ddd;
  -webkit-transition: all 5s ease;
  -moz-transition: all 5s ease;
  -o-transition: all 5s ease;
  transition: all 5s ease;
}

  .post-item .tool-footer {
    display:none;
  }

   #editable-topic-title{
    margin-left:33pt;
    font-size: 10pt;
    outline:none;
    border:none;
    width:80%;
    padding:5pt;
    font-weight:bold;
    font-size:12pt;
    display:none;
  }

  .post-item-selected .post-header{
    background:#e0e0e0;
  }

  .post-item-highlighted {
  }

  .post-item-downlighted {
    opacity:0.2;
  }

  .post{
    margin-left:33pt;
    font-size:11pt;
    padding:5pt;
  }

  .post-header{
    padding:5pt;
    background:#e8e8e8;
    border-radius:3pt 3pt 0 0;
    cursor:pointer;
  }

      .post-header .profile-image{
        background-size: 32px 32px;
	    float:left;
        border-radius: 50%;
        display: inline-block;
        height: 32px;
        width: 32px;
        border:2pt solid white;
        cursor:pointer;
      }

      .post-creator{
        float:left;
        position:relative;
        top:5px;
        left:8px;
        padding:2pt;
        font-weight:bold;
        font-size:10pt;
        white-space: pre-wrap;      /* CSS3 */   
        white-space: -moz-pre-wrap; /* Firefox */    
        white-space: -pre-wrap;     /* Opera <7 */   
        white-space: -o-pre-wrap;   /* Opera 7 */    
        word-wrap: break-word;      /* IE */
      }

  .postfooter{
    width:0;
    height:0;
    font-size:0;
  }

  .post-tools{
    display:none;
    position:relative;
    top:5px;
    padding:2pt;
    float:right;
  }

      .post-action{
        border:none;
        box-shadow:none;
        background:none;
        color:#333;
        padding:0pt 2pt 0 2pt;
        margin:0;
      }

      .post-action-quote{
        display:none;
      }

